2008-02-28  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/totem.ui: Back-out some of the changes in revision 5187,
	as they accidentally broke string freeze. (Reopens: #454642)

2008-02-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_set_scale_ratio): When a visualisation is
	playing, and we're being asked to resize the window to a scale,
	use the viz size to resize the window (Closes: #341355)

	* src/totem.c (window_state_event_cb): Remove debug

2008-02-27  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/properties.ui:
	* data/totem.ui: Re-add ATK properties to the UI files, converted
	from the glade files. (Closes: #454642)

2008-02-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c (load_video_out_driver):
	Work around broken multi-head support in the xine-lib backend
	(Helps: #399220)

============ Version 2.21.95

2008-02-26  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.95

2008-02-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	Fix logic error of jumping loop by 2 every time
	causing half dvb channels to be lost and potential
	segfaults.
	Thanks tim for spotting.

2008-02-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/ontop/totem-ontop.c: (update_from_state):
	Only stay on top if video is playing, not visualisations.
	(Closes: #501521)

2008-02-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Say we support audio/midi,
	with the new wildmidi plugin in gst-plugins-bad

2008-02-25  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_is_playing): Fix xine-lib backend
	build again, thanks to Götz Waschk
	<waschk@mandriva.org> (Closes: #518560)

2008-02-24  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: And make sure to add the bugreport
	script to EXTRA_DIST
