@@ -4025,6 +4025,8 @@ bacon_video_widget_dvb_get_adapter_type (const char *device)
 	    adapter_type = 'T';
 	  } else if (g_str_equal (g_value_get_string (val), "DVB-S") != FALSE) {
 	    adapter_type = 'S';
+	  } else if (g_str_equal (g_value_get_string (val), "DVB-C") != FALSE) {
+	    adapter_type = 'C';
 	  }
 	}
 	gst_message_unref (msg);
@@ -4147,7 +4149,8 @@ bacon_video_widget_get_mrls (BaconVideoWidget * bvw, TotemDiscMediaType type,
           if (line[0] != '#') {
             gchar** fields = g_strsplit(line, ":", 0);
             if ((g_strv_length (fields) == 13 && adapter_type == 'T') ||
-                (g_strv_length (fields) == 8 && adapter_type == 'S')) {
+                (g_strv_length (fields) == 8 && adapter_type == 'S') ||
+		(g_strv_length (fields) == 9 && adapter_type == 'C')) {
               g_ptr_array_add (array, g_strdup_printf("dvb://%s", fields[0]));
             }
             g_strfreev(fields);
