@@ -1,3 +1,8 @@
+2008-03-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	Add DVB-C support.
+
 2008-02-28  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* data/totem.ui: Back-out some of the changes in revision 5187,
